--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,14 +1,3 @@
-body {
-  max-width: 800px;
-  margin-right: auto;
-  margin-left: auto;
-  line-height: 1.5;
-}
+@import "variables";
 
-img {
-  max-width: 100%;
-}
-
-.inline-block {
-  display: inline-block;
-}
+@import "global";
