--- a/author.hbs
+++ b/author.hbs
@@ -70,7 +70,7 @@
 {{/author}}
 
 {{! The main content area on the homepage }}
-<main class="content">
+<main class="content container post-list">
 
   {{! The tag below includes the post loop - partials/loop.hbs }}
   {{> "loop"}}
