--- a/index.hbs
+++ b/index.hbs
@@ -2,7 +2,9 @@
 
 {{>main-header}}
 
-<main class="content post-list" id="content">
+<main class="content post-list container" id="content">
+  <section class="row">
     {{!-- The tag below includes the post loop - partials/loop.hbs --}}
     {{> "loop"}}
+  </section>
 </main>
