--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -12,24 +12,25 @@
       </ul>
     </nav> -->
   {{!/if}}
+  <section class="container">
+    <small class="site-footer__attribution">
 
-  <small class="site-footer__attribution">
+      <span class="site-footer__attribution--copyright">
+        &copy; {{date format="YYYY"}}
+        <a href="{{@blog.url}}/">{{@blog.title}}</a>
+      </span>&ensp;
 
-    <span class="site-footer__attribution--copyright">
-      &copy; {{date format="YYYY"}}
-      <a href="{{@blog.url}}/">{{@blog.title}}</a>
-    </span>&ensp;
+      <span class="site-footer__attribution--theme-author">
+        <a href="https://github.com/jamesfacts/frontier-ghost-theme">Frontier</a>
+        stater theme
+      </span>&ensp;
 
-    <span class="site-footer__attribution--theme-author">
-      <a href="https://github.com/curiositry/undefined-ghost-theme">Undefined</a>
-      theme by
-      <a href="http://curiositry.github.io">Curiositry</a>
-    </span>&ensp;
+      <span class="site-footer__attribution--ghost">
+        Proudly published with <a href="https://ghost.org">Ghost</a>
+      </span>
 
-    <span class="site-footer__attribution--ghost">
-      Proudly published with <a href="https://ghost.org">Ghost</a>
-    </span>
+    </small>
 
-  </small>
+  </section>
 
 </footer>
