--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,9 @@
-@import "variables";
-
 // pull in bootstrap
 @import "~bootstrap/scss/bootstrap";
 
+@import "variables";
 @import "global";
+@import "header";
+@import "frontpage";
+@import "pages";
+@import "posts";
