--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -22,7 +22,7 @@
 
       <span class="site-footer__attribution--theme-author">
         <a href="https://github.com/jamesfacts/frontier-ghost-theme">Frontier</a>
-        stater theme
+        starter theme
       </span>&ensp;
 
       <span class="site-footer__attribution--ghost">
