Update to use ghost 2.0

--- a/default.hbs
+++ b/default.hbs
@@ -9,7 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
   {{! Page Meta }}
-  <title>{{meta_title}}{{#is "post, page"}} — {{@blog.title}}{{/is}}</title>
+  <title>{{meta_title}}{{#is "post, page"}} — {{@site.title}}{{/is}}</title>
 
   {{! Styles }}
   <link rel="stylesheet" type="text/css" href="{{asset "styles/main.css"}}" />
