--- a/partials/post-teaser.hbs
+++ b/partials/post-teaser.hbs
@@ -32,7 +32,7 @@
 
     <footer class="post-teaser__meta">
       <span class="post-teaser__author">
-        Posted by {{author}} on
+        Posted by {{authors}} on
         <time class="post-teaser__meta__date" datetime="{{date format='YYYY-MM-DD'}}">
           {{date format="MMMM Do, YYYY"}}.
         </time>
