--- a/author.hbs
+++ b/author.hbs
@@ -2,7 +2,7 @@
 
 {{> content-header}}
 
-{{#author}}
+{{#primary_author}}
   <section class="author-profile container">
 
     {{#if profile_image}}
@@ -67,7 +67,7 @@
     </div> {{! end author meta }}
 
   </section>
-{{/author}}
+{{/primary_author}}
 
 {{! The main content area on the homepage }}
 <main class="content container post-list">
