--- a/partials/author-info.hbs
+++ b/partials/author-info.hbs
@@ -1,4 +1,4 @@
-{{#author}}
+{{#foreach authors}}
   <section class="author-info">
 
     <h4 class="author-info__name">
@@ -41,4 +41,4 @@
 
   </span> {{! end author meta }}
   </section> {{! end author info }}
-{{/author}}
+{{/foreach}}
